don't truncate the "recent note" listing until i can fix the UI to be more obvious that it's truncated

--- a/source/stylesheets/app/list_notes.scss
+++ b/source/stylesheets/app/list_notes.scss
@@ -24,8 +24,8 @@
     }
   }
 
-  .collapsible-body:not(.demo) {
-    max-height: 250px;
-    overflow: hidden;
-  }
+  //.collapsible-body:not(.demo) {
+  //  max-height: 250px;
+  //  overflow: hidden;
+  //}
 }
